output/xavefinance_p5_25_124/foundry_validation/F-001_Proposal_questions_are_answerable_immedi/forge_stdout_attempt0.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:47:38:
   |
47 |     address internal constant WETH = 0xC02aaA39b223FE8D0A0E5C4F27eAD9083C756Cc2;
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x5f98805A4E8be255a32880FDeC7F6728C6568bA0". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x5f98805A4E8be255a32880FDeC7F6728C6568bA0". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:53:38:
   |
53 |     address internal constant LUSD = 0x5f98805A4E8be255a32880FDeC7F6728C6568ba0;
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x99D8A9c45b2ecB5ba8F3d56b3F4c7e0C8CbEA2Ff". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x99D8A9c45b2ecB5ba8F3d56b3F4c7e0C8CbEA2Ff". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:54:37:
   |
54 |     address internal constant MIM = 0x99D8a9C45b2eCb5bA8f3D56B3f4c7e0c8CbeA2Ff;
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

